# pyinstallergit

./: README.md  Readme.md  proj_structure.md  py_packages.txt  pyproject.toml  run.sh
.ipynb_checkpoints/: README-checkpoint.md  main-checkpoint.spec
app/: llm_backend.py  main.py
config/: extra-packages.txt
demo/: finetune_roberta.py
scripts/: 00_1_fix_path.sh  00_bootstrap.sh  01_create_conda_env.sh  02_git_init.sh  02_setup_pyinstaller_env.sh  03_finetune_demo.sh  03_uv_sync.sh  04_run_demo.sh  04_run_demos.sh  05_build_binary.sh  lib_common.sh
scripts/src/: __main__.py  active_learning_diarization.py  data_io.py  finetune_diarization.py  utils.py
src/: __main__.py  active_learning_diarization.py
src/activelearn/: active_learning_diarization.py
src/annotation/: finetune_diarization.py
src/data/: data_io.py
src/denoise/: denoise.py
src/diarization/: diarization.py
src/eval/: metrics.py
test/: test.sh
